Tue May 11 08:07:33 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/CSLDeadline/Connector/CSL_DeadlineTest_Connector.idl:
        * connectors/dds4ccm/tests/CSLDeadline/Receiver/CSL_DeadlineTest_Receiver.idl:
        * connectors/dds4ccm/tests/CSLDeadline/Receiver/CSL_DeadlineTest_Receiver_exec.h:
        * connectors/dds4ccm/tests/CSLDeadline/Receiver/CSL_DeadlineTest_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/CSLDeadline/Sender/CSL_DeadlineTest_Sender.idl:
        * connectors/dds4ccm/tests/CSLDeadline/Sender/CSL_DeadlineTest_Sender_exec.h:
        * connectors/dds4ccm/tests/CSLDeadline/descriptors/Plan.cdp:
          Instantiate the Typed CCM_DDS module inside the module of this test. This
          way the IDL type and all CCM_DDS typed interfaces are all in the
          module.

Tue May 11 07:34:49 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/examples/Hello/descriptors/1_to_5.cdp:
        * connectors/dds4ccm/examples/Hello/descriptors/5_Receivers.cdp:
        * connectors/dds4ccm/examples/Hello/descriptors/5_Senders.cdp:
        * connectors/dds4ccm/examples/Hello/descriptors/5_to_1.cdp:
        * connectors/dds4ccm/examples/Hello/descriptors/ReceiverOnly.cdp:
        * connectors/dds4ccm/examples/Hello/descriptors/SenderOnly.cdp:
          Resolved test errors.

Mon May 10 14:10:22 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/ContentFilteredTopic/Component/CFT_Test_Component.idl:
        * connectors/dds4ccm/tests/ContentFilteredTopic/Component/CFT_Test_Component_exec.h:
        * connectors/dds4ccm/tests/ContentFilteredTopic/Connector/CFT_Test_Connector.idl:
        * connectors/dds4ccm/tests/ContentFilteredTopic/descriptors/Plan.cdp:
          Instantiate the Typed CCM_DDS module inside the module of this test. This
          way the IDL type and all CCM_DDS typed interfaces are all in the
          module.
