@@ -71,7 +71,7 @@
           <kind>tk_string</kind>
         </type>
         <value>
-          <string>create_CSL_QoSTest_CSL_QoSTest_Connector_Impl</string>
+          <string>create_CSLQoSConnector_DDS_Event_Impl</string>
         </value>
       </value>
     </execParameter>
@@ -82,7 +82,7 @@
           <kind>tk_string</kind>
         </type>
         <value>
-          <string>create_CSL_QoSTest_CSL_QoSTest_Connector_Servant</string>
+          <string>create_CSLQoSConnector_DDS_Event_Servant</string>
         </value>
       </value>
     </execParameter>
